--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "agile-and-pixels",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.13.0",
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "next": "13.3.2",
-    "next-auth": "^4.22.1",
-    "prisma": "^4.13.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
-  }
+	"name": "agile-and-pixels",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "prisma generate && next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@next-auth/prisma-adapter": "^1.0.6",
+		"@prisma/client": "^4.13.0",
+		"@types/node": "18.16.3",
+		"@types/react": "18.2.0",
+		"@types/react-dom": "18.2.1",
+		"next": "13.3.2",
+		"next-auth": "^4.22.1",
+		"prisma": "^4.13.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.8.0",
+		"ts-node": "^10.9.1",
+		"typescript": "5.0.4"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.23",
+		"tailwindcss": "^3.3.2"
+	}
 }
