--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react-dom": "18.2.1",
 		"next": "13.3.2",
 		"next-auth": "^4.22.1",
+		"nodemailer": "^6.9.1",
 		"prisma": "^4.13.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
