--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/node": "18.16.3",
 		"@types/react": "18.2.0",
 		"@types/react-dom": "18.2.1",
+		"gsap": "^3.11.5",
 		"next": "13.3.2",
 		"next-auth": "^4.22.1",
 		"nodemailer": "^6.9.1",
